crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__value__tests__value_multiline_body.snap
---
source: crates/nash-parse/src/declaration/value.rs
description: "greet name =\n    name\n"
---
Value(
    None,
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 3,
                column: 1,
            },
        },
        value: Value {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                value: "greet",
            },
            arguments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: Var(
                        "name",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 9,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "name",
                },
            },
            annotation: None,
        },
    },
)
