crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__value__tests__value_simple.snap
---
source: crates/nash-parse/src/declaration/value.rs
description: foo = 1
---
Value(
    None,
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        value: Value {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: "foo",
            },
            arguments: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 8,
                    },
                },
                value: Int(
                    1,
                ),
            },
            annotation: None,
        },
    },
)
