crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__value__tests__value_with_doc_comment_multiline.snap
---
source: crates/nash-parse/src/declaration/value.rs
description: "{-| Adds two numbers together.\n\nThis is a longer description.\n-}\nadd : Int -> Int -> Int\nadd x y = x\n"
---
Value(
    Some(
        Comment(
            Snippet {
                data: [
                    32,
                    65,
                    100,
                    100,
                    115,
                    32,
                    116,
                    119,
                    111,
                    32,
                    110,
                    117,
                    109,
                    98,
                    101,
                    114,
                    115,
                    32,
                    116,
                    111,
                    103,
                    101,
                    116,
                    104,
                    101,
                    114,
                    46,
                    10,
                    10,
                    84,
                    104,
                    105,
                    115,
                    32,
                    105,
                    115,
                    32,
                    97,
                    32,
                    108,
                    111,
                    110,
                    103,
                    101,
                    114,
                    32,
                    100,
                    101,
                    115,
                    99,
                    114,
                    105,
                    112,
                    116,
                    105,
                    111,
                    110,
                    46,
                    10,
                ],
                off_row: 1,
                off_col: 4,
            },
        ),
    ),
    Located {
        region: Region {
            start: Position {
                line: 5,
                column: 1,
            },
            end: Position {
                line: 7,
                column: 1,
            },
        },
        value: Value {
            name: Located {
                region: Region {
                    start: Position {
                        line: 6,
                        column: 1,
                    },
                    end: Position {
                        line: 6,
                        column: 4,
                    },
                },
                value: "add",
            },
            arguments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 6,
                            column: 5,
                        },
                        end: Position {
                            line: 6,
                            column: 6,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 6,
                            column: 7,
                        },
                        end: Position {
                            line: 6,
                            column: 8,
                        },
                    },
                    value: Var(
                        "y",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 6,
                        column: 11,
                    },
                    end: Position {
                        line: 6,
                        column: 12,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "x",
                },
            },
            annotation: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 7,
                        },
                        end: Position {
                            line: 5,
                            column: 24,
                        },
                    },
                    value: Lambda {
                        from: Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 7,
                                },
                                end: Position {
                                    line: 5,
                                    column: 10,
                                },
                            },
                            value: Type {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 7,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 10,
                                    },
                                },
                                name: "Int",
                                args: [],
                            },
                        },
                        to: Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 14,
                                },
                                end: Position {
                                    line: 5,
                                    column: 24,
                                },
                            },
                            value: Lambda {
                                from: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 14,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 17,
                                        },
                                    },
                                    value: Type {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 14,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 17,
                                            },
                                        },
                                        name: "Int",
                                        args: [],
                                    },
                                },
                                to: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 21,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 24,
                                        },
                                    },
                                    value: Type {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 21,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 24,
                                            },
                                        },
                                        name: "Int",
                                        args: [],
                                    },
                                },
                            },
                        },
                    },
                },
            ),
        },
    },
)
